--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "program restoran",
-  "version": "2.1.2",
-  "description": "blast fast eleventy with seo",
+  "name": "Landing Page 11ty",
+  "version": "1.1.2",
+  "description": "blast fast eleventy landing page with seo",
   "scripts": {
     "build": "eleventy",
     "watch": "eleventy --watch",
@@ -9,15 +9,12 @@
     "start": "eleventy --serve",
     "debug": "DEBUG=* eleventy"
   },
-  "repository": {
-    "type": "git",
-    "url": "git:github.com/mesinkasir/landingpage11ty.git"
-  },
   "author": {
     "name": "creativitas",
     "email": "axcora@gmail.com",
     "url": "https://www.fiverr.com/creativitas"
   },
+  "homepage": "https://github.com",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.0-canary.14",
     "@11ty/eleventy-navigation": "^0.3.3",
