--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
-
+github: mesinkasir
 custom: ['https://www.fiverr.com/creativitas/create-your-custom-website-and-app','https://www.fiverr.com/creativitas/design-your-modern-website-using-jekyll','https://www.fiverr.com/creativitas/create-your-website-with-new-technology']
